lanecwe-Prod/src/objects/PartnerEnterprise__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enterprises</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object. Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Name__c</fullName>
        <label>Enterprise Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Enterprise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enterprise ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Enterprises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>